Sugati/src/objects/Rule__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_Days_to_Departure_From__c</fullName>
        <label>Days to Departure From</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Days_to_Departure_To__c</fullName>
        <label>Days to Departure To</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Deposit_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_Percentage__c</fullName>
        <label>% of total booking price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>R_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>R_Percentage__c</columns>
        <columns>R_Days_to_Departure_From__c</columns>
        <columns>R_Days_to_Departure_To__c</columns>
        <columns>R_Deposit_Only__c</columns>
        <columns>R_Supplier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <recordTypes>
        <fullName>Client_Payment</fullName>
        <active>true</active>
        <label>Client Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier_Payment</fullName>
        <active>true</active>
        <label>Supplier Payment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>